# Sisyphus-X

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  PROJECT-AUDIT-REPORT.md  README.md  docker-compose.yml  init.sh  package-lock.json  package.json  pytest.ini  requirements.txt  sisyphus_init.sh  stop.sh  test_all_apis.py  test_zhipu_api.py  任务规划.json
backend/: .env.example  .gitignore  ARCHITECTURE.md  README.md  conftest.py  coverage.json  dev_tools.py  fix_environments_routes.sh  fix_interfaces_routes.sh  pyproject.toml  pyrightconfig.json  requirements.txt  run_tests.sh  test_datetime_fix.py  test_db_connection.py  test_docstring_parser.py  test_global_params.sh  test_parser_standalone.py  test_scenario_debug.sh  test_websocket_manual.py
backend/alembic/: env.py
backend/alembic/versions/: 0fdf067e89d0_add_oauth_fields.py  1770825858894119000_add_interface_fields.py  1cf362f7d6d9_initial_schema.py  20260308_plnrpt.py  5bd43f96a6c1_add_interface_history_and_test_case_.py  6f165be7569b_add_functional_test_module_tables.py  ad3c4345ee46_add_api_test_case_models.py  add_global_params_table.py  b9849f1b4fe4_update_scenario_models_add_priority_.py
backend/alembic/versions/.archive/: 001_initial.py  43d7bf1d9c9f_merge_migration_branches.py  98fb825526df_add_key_and_owner_to_projects.py  ce6573f9b439_initial_migration.py  merge_all_migrations.py  phase1_refactor.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: api.py
backend/app/core/: __init__.py  base.py  base_new.py  celery_app.py  config.py  crypto.py  db.py  deps.py  exceptions.py  logging_config.py  network.py  redis.py  response.py  scheduler.py  security.py  seed_data.py  seed_global_params.py  seed_keywords.py  storage.py
backend/app/engine/: __init__.py  cli.py
backend/app/engine/core/: runner.py
backend/app/engine/data_driven/: driver.py
backend/app/engine/executor/: __init__.py  custom.py  db.py  request.py
backend/app/engine/extractor/: extractor.py
backend/app/engine/parser/: csv_parser.py  yaml_parser.py
backend/app/engine/result/: json_reporter.py  log_collector.py
backend/app/engine/security/: regex_validator.py  size_limiter.py  sql_validator.py
backend/app/engine/utils/: minio_client.py  retry.py  timeout.py  variables.py
backend/app/engine/validation/: comparators.py  validator.py
backend/app/middleware/: error_handler.py  performance.py
backend/app/models/: __init__.py  ai_config.py  ai_conversation.py  api_test_case.py  database_config.py  document.py  env_variable.py  file_attachment.py  functional.py  functional_test_case.py  functional_test_point.py  global_param.py  interface_history.py  interface_test_case.py  keyword.py  plan.py  project.py  report.py  requirement.py  scenario.py  settings.py  test_case.py  test_case_knowledge.py  test_case_template.py  test_execution.py  test_plan.py  test_report.py  user.py  user_management.py
backend/app/models_new/: __init__.py  database_config.py  environment.py  execution.py  interface.py  keyword.py  plan.py  project.py  scenario.py  setting.py  user.py
backend/app/modules/auth/: routes.py  schemas.py  service.py
backend/app/modules/environment/: __init__.py  routes.py  schemas.py  service.py
backend/app/modules/execution/: __init__.py  routes.py  schemas.py  service.py  tasks.py  websocket.py
backend/app/modules/interface/: __init__.py  routes.py  schemas.py  service.py
backend/app/modules/keyword/: __init__.py  routes.py  schemas.py  service.py
backend/app/modules/plan/: __init__.py  routes.py  schemas.py  service.py
backend/app/modules/project/: database_routes.py  database_schemas.py  database_service.py  routes.py  schemas.py  service.py
backend/app/modules/report/: __init__.py  routes.py  schemas.py  service.py
backend/app/modules/scenario/: __init__.py  routes.py  schemas.py  service.py
backend/app/modules/setting/: global_param_routes.py  global_param_schemas.py  global_param_service.py  global_variable_routes.py  global_variable_service.py  schemas.py
backend/app/schemas/: __init__.py  ai_config.py  api_test_case.py  auth.py  dashboard.py  database_config.py  document.py  env_variable.py  environment.py  global_param.py  interface.py  interface_history.py  interface_test_case.py  keyword.py  pagination.py  plan.py  project.py  report.py  requirement.py  scenario.py  settings.py  test_case_generation.py  test_plan.py  test_point_generation.py  test_report.py  user.py  user_management.py
backend/app/services/: ai_config_service.py  api_engine_adapter.py  curl_parser.py  engine_executor.py  environment_service.py  scenario_parser.py  test_case_generation_service.py  test_case_generator.py  test_point_generation_service.py  test_result_processor.py  variable_replacer.py  vector_store_service.py  yaml_generator.py
backend/app/services/ai/: __init__.py  checkpointer.py  llm_service.py
backend/app/services/execution/: __init__.py  (+9 more)
backend/app/utils/: __init__.py  cache.py  crud_helpers.py  datetime.py  exceptions.py  rich_logger.py
backend/migrations/performance/: 001_add_performance_indexes.py
backend/tests/: BUG_STATUS_UPDATE.md  README.md  conftest.py  conftest_e2e.py
backend/tests/api/: TEST_FIX_SUMMARY.md  test_auth.py  test_dashboard.py  test_interfaces.py  test_interfaces_api.py  test_interfaces_api.py.bak3  test_interfaces_api.py.bak4  test_interfaces_api.py.bak5  test_interfaces_api.py.bak6  test_interfaces_api.py.bak7  test_keywords.py  test_plans.py  test_projects_api.py  test_projects_enhanced.py  test_reports.py  test_scenarios.py
backend/tests/models/: test_keyword.py  test_project.py  test_project.py.bak  test_project_uuid.py  test_report.py  test_scenario.py  test_test_plan.py  test_user.py
backend/tests/services/: __init__.py
engines/sisyphus-api-engine/: README.md  pyproject.toml
(+565 files in other folders)
