[project]
name = "sisyphus-backend"
version = "0.1.0"
description = "SisyphusX - AI驱动的企业级自动化测试平台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "httpx>=0.28.0",
    "numpy>=2.0.0",
    "networkx>=3.0.0",
    "pyyaml>=6.0.0",
    "apscheduler>=3.11.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=43.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
    "minio>=7.2.20",
    "greenlet>=3.3.1",
    "redis>=7.1.1",
    "aiomysql>=0.3.2",
    "sisyphus-api-engine>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.0",
    "pyright>=1.1.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.0",
    "pyright>=1.1.0",
    "rich>=13.0.0",
]

# Ruff配置
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806"]  # 行长度 + 变量命名风格

[tool.ruff.lint.isort]
known-first-party = ["app"]

# Pyright配置
[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__", "**/.pytest_cache"]
defineConstant = { DEBUG = true }
stubPath = ""
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false

# Pytest配置
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
python_files = ["test_*.py"]
